# geospatial

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CNAME  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  index.html  index.ipynb  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docker-image.yml  docs-build.yml  docs.yml  macos-test.yml  macos.yml  macos_gdal.yml  pypi.yml  ubuntu.yml  windows.yml
binder/: environment.yml
changelog/: changelog.md  index.html
contributing/: contributing.md  index.html
docs/: Makefile  changelog.md  conf.py  contributing.md  geospatial.md  index.ipynb  index.md  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
examples/: colab.ipynb  examples.ipynb  leafmap.ipynb  packages.ipynb
geospatial/: __init__.py  cli.py  geospatial.md  index.html
installation/: index.html  installation.md
search/: search_index.json
tests/: __init__.py  test_geospatial.py
usage/: index.html  usage.md
